added prefix /api/ to all endpoints
